IS-178 Code cleanup